--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,17 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Docker
+.docker
+docker-compose.override.yml
+
+# Database
+postgres_data/
+
+# Static files collected
+/staticfiles/
+
+# Coverage
+.coverage
+htmlcov/
