--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,14 +13,14 @@ jobs:
     env:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       DEBUG: False
-      ALLOWED_HOSTS: localhost,127.0.0.1,0.0.0.0,192.168.0.102
+      ALLOWED_HOSTS: localhost,127.0.0.1,0.0.0.0,192.168.0.102,95.140.159.87
       DB_NAME: postgres
       DB_USER: postgres
       DB_PASSWORD: postgrespassword
-      DATABASE_URL: postgres://postgres:postgrespassword@db:5432/postgres
+      DATABASE_URL: postgres://postgres:postgrespassword@localhost:5432/postgres
     
     services:
-      db:
+      postgres:
         image: postgres:13
         env:
           POSTGRES_DB: postgres
@@ -42,6 +42,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    
+    - name: Create static directory
+      run: mkdir -p static
     
     - name: Run migrations
       run: python manage.py migrate
