--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -89,8 +89,9 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         envs: DEBUG,SECRET_KEY,ALLOWED_HOSTS,DB_NAME,DB_USER,DB_PASSWORD,DATABASE_URL
         script: |
+          mkdir -p /home/${{ secrets.SERVER_USERNAME }}/user_directory_demo
           cd /home/${{ secrets.SERVER_USERNAME }}/user_directory_demo
-          echo "DEBUG=${DEBUG}" >> .env
+          echo "DEBUG=${DEBUG}" > .env
           echo "SECRET_KEY=${SECRET_KEY}" >> .env
           echo "ALLOWED_HOSTS=${ALLOWED_HOSTS}" >> .env
           echo "DB_NAME=${DB_NAME}" >> .env
@@ -98,6 +99,17 @@ jobs:
           echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
           echo "DATABASE_URL=${DATABASE_URL}" >> .env
           
+          # Install Docker and Docker Compose if not already installed
+          if ! command -v docker &> /dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y docker.io
+          fi
+
+          if ! command -v docker-compose &> /dev/null; then
+            sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+          fi
+
           # Pull the latest Docker image and restart the containers
           sudo docker-compose pull
           sudo docker-compose up -d
