--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -89,18 +89,30 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         envs: DEBUG,SECRET_KEY,ALLOWED_HOSTS,DB_NAME,DB_USER,DB_PASSWORD,DATABASE_URL
         script: |
+          set -e
+          echo "Starting deployment process..."
+          
           # Navigate to the project directory
           cd /home/${{ secrets.SERVER_USERNAME }}/user_directory_demo
-
+          echo "Current directory: $(pwd)"
+          
           # Update the repository
           if [ -d .git ]; then
+            echo "Git repository exists. Updating..."
             git fetch --all
             git reset --hard origin/main
           else
-            git clone https://github.com/maria-v-ch/user_directory_demo.git .
+            echo "Git repository doesn't exist. Initializing..."
+            git init
+            git remote add origin https://github.com/maria-v-ch/user_directory_demo.git
+            git fetch
+            git checkout -f main
           fi
-
+          
+          echo "Git repository updated."
+          
           # Create or update the .env file
+          echo "Updating .env file..."
           echo "DEBUG=${DEBUG}" > .env
           echo "SECRET_KEY=${SECRET_KEY}" >> .env
           echo "ALLOWED_HOSTS=${ALLOWED_HOSTS}" >> .env
@@ -108,21 +120,32 @@ jobs:
           echo "DB_USER=${DB_USER}" >> .env
           echo "DB_PASSWORD=${DB_PASSWORD}" >> .env
           echo "DATABASE_URL=${DATABASE_URL}" >> .env
-        
+          echo ".env file updated."
+          
           # Install Docker and Docker Compose if not already installed
           if ! command -v docker &> /dev/null; then
+            echo "Installing Docker..."
             sudo apt-get update
             sudo apt-get install -y docker.io
+          else
+            echo "Docker is already installed."
           fi
 
           if ! command -v docker-compose &> /dev/null; then
+            echo "Installing Docker Compose..."
             sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
+          else
+            echo "Docker Compose is already installed."
           fi
 
-          # Ensure we're in the correct directory
-          cd /home/${{ secrets.SERVER_USERNAME }}/user_directory_demo
+          echo "Current directory contents:"
+          ls -la
 
-          # Pull the latest Docker image and restart the containers
+          echo "Pulling latest Docker images..."
           sudo docker-compose pull
+
+          echo "Starting Docker containers..."
           sudo docker-compose up -d
+
+          echo "Deployment process completed."
