--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,7 +13,7 @@ jobs:
     env:
       DEBUG: 'False'
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      ALLOWED_HOSTS: localhost,127.0.0.1,0.0.0.0,192.168.0.102,95.140.159.87
+      ALLOWED_HOSTS: localhost,127.0.0.1,0.0.0.0,paragoni.space,www.paragoni.space
       DB_NAME: postgres
       DB_USER: postgres
       DB_PASSWORD: postgrespassword
@@ -149,3 +149,14 @@ jobs:
           sudo docker-compose up -d
 
           echo "Deployment process completed."
+
+          # Install and run Certbot for SSL
+          if ! command -v certbot &> /dev/null; then
+            sudo apt-get update
+            sudo apt-get install -y certbot python3-certbot-nginx
+          fi
+  
+          sudo certbot --nginx -d paragoni.space -d www.paragoni.space --non-interactive --agree-tos -m your-email@example.com
+  
+          # Restart Nginx to apply changes
+          sudo systemctl restart nginx
