--- a/nginx.conf
+++ b/nginx.conf
@@ -5,9 +5,18 @@ upstream django {
 server {
     listen 80;
     server_name paragoni.space www.paragoni.space;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name paragoni.space www.paragoni.space;
+
+    ssl_certificate /etc/letsencrypt/live/paragoni.space/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/paragoni.space/privkey.pem;
 
     location / {
-        proxy_pass http://web:8000;
+        proxy_pass http://django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
