--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,10 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
   nginx:
     image: nginx:latest
-    ports:
-      - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/code/staticfiles
+      - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - web
 
