--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,9 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
   nginx:
     image: nginx:latest
+    ports:
+      - "8080:80"
+      - "8443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - static_volume:/code/staticfiles
