--- a/paragoni.space.conf
+++ b/paragoni.space.conf
@@ -1,10 +1,7 @@
 <VirtualHost *:80>
     ServerName paragoni.space
     ServerAlias www.paragoni.space
-    
-    ProxyPreserveHost On
-    ProxyPass / http://localhost:8888/
-    ProxyPassReverse / http://localhost:8888/
+    Redirect permanent / https://paragoni.space/
 </VirtualHost>
 
 <VirtualHost *:443>
@@ -16,6 +13,6 @@
     SSLCertificateKeyFile /etc/letsencrypt/live/paragoni.space/privkey.pem
     
     ProxyPreserveHost On
-    ProxyPass / http://localhost:4443/
-    ProxyPassReverse / http://localhost:4443/
+    ProxyPass / http://127.0.0.1:8080/
+    ProxyPassReverse / http://127.0.0.1:8080/
 </VirtualHost>
