--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -70,27 +70,40 @@ jobs:
           sudo cp paragoni.space.conf /etc/apache2/sites-available/
           sudo a2ensite paragoni.space.conf
 
-          # Ensure SSL certificates are in place (you might need to adjust this based on your exact setup)
-          sudo certbot --nginx -d paragoni.space -d www.paragoni.space --non-interactive --agree-tos -m m.chuvtaeva@gmail.com
+          # Ensure SSL certificates are in place (using Apache plugin)
+          sudo certbot --apache -d paragoni.space -d www.paragoni.space --non-interactive --agree-tos -m m.chuvtaeva@gmail.com
 
           # Reload Apache
           sudo systemctl reload apache2
 
-          # Set environment variables
+          # Set environment variables (escaping special characters)
           export DEBUG=False
           export SECRET_KEY='${{ secrets.SECRET_KEY }}'
           export ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,paragoni.space,www.paragoni.space
-          export DB_NAME=${{ secrets.DB_NAME }}
-          export DB_USER=${{ secrets.DB_USER }}
-          export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
-          export DATABASE_URL=${{ secrets.DATABASE_URL }}
+          export DB_NAME='${{ secrets.DB_NAME }}'
+          export DB_USER='${{ secrets.DB_USER }}'
+          export DB_PASSWORD='${{ secrets.DB_PASSWORD }}'
+          export DATABASE_URL='${{ secrets.DATABASE_URL }}'
+
+          # Ensure Docker and Docker Compose are available
+          if ! command -v docker &> /dev/null; then
+            echo "Docker not found, installing..."
+            sudo apt-get update
+            sudo apt-get install -y docker.io
+          fi
+
+          if ! command -v docker-compose &> /dev/null; then
+            echo "Docker Compose not found, installing..."
+            sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+          fi
 
           # Pull and start Docker containers
-          docker-compose pull
-          docker-compose up -d
+          sudo docker-compose pull
+          sudo docker-compose up -d
 
           # Run migrations
-          docker-compose exec -T web python manage.py migrate
+          sudo docker-compose exec -T web python manage.py migrate
 
           # Collect static files
-          docker-compose exec -T web python manage.py collectstatic --noinput
+          sudo docker-compose exec -T web python manage.py collectstatic --noinput
