--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -86,12 +86,12 @@ jobs:
           # Create .env file with environment variables
           cat << EOF > .env
           DEBUG=False
-          SECRET_KEY='${SECRET_KEY}'
+          SECRET_KEY="${SECRET_KEY}"
           ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,paragoni.space,www.paragoni.space
-          DB_NAME='${DB_NAME}'
-          DB_USER='${DB_USER}'
-          DB_PASSWORD='${DB_PASSWORD}'
-          DATABASE_URL='${DATABASE_URL}'
+          DB_NAME="${DB_NAME}"
+          DB_USER="${DB_USER}"
+          DB_PASSWORD="${DB_PASSWORD}"
+          DATABASE_URL="${DATABASE_URL}"
           EOF
 
           # Ensure Docker and Docker Compose are available
@@ -109,7 +109,7 @@ jobs:
 
           # Pull and start Docker containers
           sudo docker-compose pull
-          sudo docker-compose up -d
+          sudo docker-compose up -d --remove-orphans
 
           # Run migrations
           sudo docker-compose exec -T web python manage.py migrate
