--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -100,10 +100,23 @@ jobs:
 
           echo "Created .env file"
 
-          # Update Docker and Docker Compose
-          echo "Updating Docker and Docker Compose..."
-          sudo apt-get update
-          sudo apt-get install -y docker.io docker-compose
+          # Check Docker installation
+          if ! command -v docker &> /dev/null; then
+            echo "Docker not found, installing..."
+            sudo apt-get update
+            sudo apt-get install -y docker.io
+          else
+            echo "Docker is already installed"
+          fi
+
+          # Check Docker Compose installation
+          if ! command -v docker-compose &> /dev/null; then
+            echo "Docker Compose not found, installing..."
+            sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+          else
+            echo "Docker Compose is already installed"
+          fi
 
           # Print Docker and Docker Compose versions
           docker --version
