--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,16 @@ services:
   web:
     build: .
     command: >
-      sh -c "python manage.py migrate &&
-             python manage.py collectstatic --noinput &&
-             gunicorn user_directory.wsgi:application --bind 0.0.0.0:8000"
+      sh -c "
+        while ! nc -z db 5432; do
+          echo 'Waiting for database...';
+          sleep 1;
+        done;
+        echo 'Database is up!';
+        python manage.py migrate &&
+        python manage.py collectstatic --noinput &&
+        gunicorn user_directory.wsgi:application --bind 0.0.0.0:8000
+      "
     volumes:
       - .:/code
       - static_volume:/code/staticfiles
