--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,6 +17,8 @@ jobs:
       DB_NAME: postgres
       DB_USER: postgres
       DB_PASSWORD: postgrespassword
+      DB_HOST: localhost
+      DB_PORT: 5432
       DATABASE_URL: postgres://postgres:postgrespassword@localhost:5432/postgres
     
     services:
