--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -135,6 +135,10 @@ jobs:
           echo "Pulling latest Docker images..."
           sudo docker-compose pull
 
+          # Create Docker network
+          echo "Creating Docker network..."
+          sudo docker network create app_network || true
+
           # Start Docker containers
           echo "Starting Docker containers..."
           sudo docker-compose up -d --remove-orphans
@@ -158,5 +162,9 @@ jobs:
           # Print database container logs
           echo "Database container logs:"
           sudo docker-compose logs db
+
+          # Print Docker network information
+          echo "Docker network information:"
+          sudo docker network inspect app_network
 
           echo "Deployment process completed."
