Update configuration for production deployment

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -98,9 +98,9 @@ jobs:
           DB_NAME="${DB_NAME}"
           DB_USER="${DB_USER}"
           DB_PASSWORD="${DB_PASSWORD}"
-          DB_HOST=user_directory_demo_db_1
+          DB_HOST=db
           DB_PORT="${DB_PORT}"
-          DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@user_directory_demo_db_1:${DB_PORT}/${DB_NAME}
+          DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@db:${DB_PORT}/${DB_NAME}
           EOF
 
           echo "Created .env file"
@@ -176,3 +176,19 @@ jobs:
           sudo docker-compose exec -T web cat /etc/hosts
 
           echo "Deployment process completed."
+
+          # Add these steps after starting the containers
+          echo "Checking Docker network..."
+          sudo docker network ls
+  
+          echo "Inspecting app_network..."
+          sudo docker network inspect app_network
+  
+          echo "Checking container IP addresses..."
+          sudo docker inspect -f '{{.Name}} - {{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(sudo docker-compose ps -q)
+  
+          echo "Checking web container's /etc/hosts..."
+          sudo docker-compose exec -T web cat /etc/hosts
+  
+          echo "Checking web container's ability to ping db..."
+          sudo docker-compose exec -T web ping -c 4 db
