--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     networks:
       - app_network
     environment:
-      - DB_HOST=user_directory_demo_db_1
+      - DB_HOST=db
 
   db:
     image: postgres:13
@@ -53,8 +53,7 @@ services:
 
 networks:
   app_network:
-    name: user_directory_demo_app_network
-    driver: bridge
+    name: app_network
 
 volumes:
   postgres_data:
