--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.8'
 services:
   web:
     build: .
-    command: sh -c "./wait-for-it.sh db -- python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "/wait-for-it.sh db:5432 -- gunicorn --bind 0.0.0.0:8000 user_directory.wsgi:application"
     volumes:
-      - .:/code
-      - static_volume:/code/staticfiles
+      - .:/app
+      - static_volume:/app/staticfiles
     expose:
       - 8000
     env_file:
@@ -42,7 +42,7 @@ services:
       - "8443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/code/staticfiles
+      - static_volume:/app/staticfiles
       - /etc/letsencrypt:/etc/letsencrypt
     depends_on:
       - web
