--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,16 @@ upstream django {
 server {
     listen 80;
     server_name paragoni.space www.paragoni.space;
-    return 301 https://$server_name$request_uri;
+
+    location / {
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /static/ {
+        alias /app/staticfiles/;
+    }
 }
 
 server {
