--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,22 @@ services:
     networks:
       - app_network
 
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    depends_on:
+      - prometheus
+
 networks:
   app_network:
     driver: bridge
@@ -56,3 +72,4 @@ networks:
 volumes:
   postgres_data:
   static_volume:
+  grafana_data:
