--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -196,3 +196,10 @@ jobs:
           # Start Docker containers
           echo "Starting Docker containers..."
           sudo docker-compose up -d --remove-orphans
+
+          echo "Checking if Prometheus port is available..."
+          if ! sudo lsof -i:9093 > /dev/null; then
+            echo "Port 9093 is available"
+          else
+            echo "Warning: Port 9093 is already in use. Prometheus may not start correctly."
+          fi
