--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,3 +5,6 @@ scrape_configs:
   - job_name: 'django'
     static_configs:
       - targets: ['web:8000']
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9093']  # Update this line
