--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       - app_network
 
   prometheus:
-    image: prom/prometheus
+    image: prom/prometheus:v2.45.0  # Use a specific version
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
@@ -64,6 +64,8 @@ services:
       - grafana_data:/var/lib/grafana
     depends_on:
       - prometheus
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
 
 networks:
   app_network:
