fixing problems with deploy of drf-yasg

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -203,3 +203,8 @@ jobs:
           else
             echo "Warning: Port 9093 is already in use. Prometheus may not start correctly."
           fi
+
+  - name: Build and push Docker images
+    run: |
+      docker-compose build
+      docker-compose push
