--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,11 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = user_directory.settings
 python_files = tests.py test_*.py *_tests.py
-addopts = --ds=user_directory.settings
+filterwarnings =
+    ignore::DeprecationWarning:drf_yasg.*:
+
+
+
 
 
 
