--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -208,8 +208,12 @@ jobs:
 
     - name: Build and push Docker images
       run: |
+        echo "Current working directory:"
         pwd
-        ls -R
+        echo "Directory contents:"
+        ls -la
+        echo "Searching for docker-compose.yml:"
+        find . -name docker-compose.yml
         if [ -f "docker-compose.yml" ]; then
           echo "docker-compose.yml found in current directory"
           docker-compose build
@@ -223,5 +227,7 @@ jobs:
           docker-compose push
         else
           echo "Error: docker-compose.yml not found"
+          echo "Listing all files in the repository:"
+          find . -type f
           exit 1
         fi
